--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Animation & Hover Effects</title>
+        <title>Circle Animation & Hover Effects</title>
         <link rel="icon" type="image/x-icon" href="icon.ico">
         <link rel="stylesheet" href="style.css">
     </head>
